# libbcrypt

./: CMakeLists.txt  README.md  build.bat  build.sh  install.sh
include/bcrypt/: BCrypt.hpp  winbcrypt.h
src/: bcrypt.c  main.cpp
